# snisid

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  PHASE_01_IMPLEMENTATION.md  PHASE_02_IMPLEMENTATION.md  PHASE_03_IMPLEMENTATION.md  PHASE_04_IMPLEMENTATION.md  PHASE_05_IMPLEMENTATION.md  PHASE_06_IMPLEMENTATION.md  PHASE_07_IMPLEMENTATION.md  PHASE_08_IMPLEMENTATION.md  PHASE_09_IMPLEMENTATION.md  PHASE_10_IMPLEMENTATION.md  PHASE_11_IMPLEMENTATION.md  PHASE_12_IMPLEMENTATION.md  PHASE_13_IMPLEMENTATION.md  PHASE_14_IMPLEMENTATION.md  PHASE_15_IMPLEMENTATION.md  PHASE_16_IMPLEMENTATION.md  PHASE_17_IMPLEMENTATION.md  PHASE_18_IMPLEMENTATION.md  PHASE_19_IMPLEMENTATION.md  PHASE_20_IMPLEMENTATION.md  README.md  README_DR.md  README_SEC.md  README_TEST.md  README_WIN.md  README_ZT.md  ROADMAP.md  SNISID-GLOBAL-TOPOLOGY.md  SNISID-MASTER-INDEX.md  SNISIDManager.ps1  (+79 more)
SNI-SIDE/sdk/python/: README.md  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_ssi_tables.py  0002_create_webhook_tables.py  0003_create_core_tables.py  0004_create_bio_adn_tables.py  0005_create_bie_obj_tit_tables.py  0006_create_per_fug_nid_ter_opr_lib_tables.py  0007_create_lab_ops_tables.py  0008_create_ndis_tables.py  0009_create_sdis_tables.py  0010_create_per_vio_idv_tables.py  0011_create_bio_identity_link.py  0012_add_rls_audit_trigger.py
backend/cli/: snisid_bio_cli.py
backend/services/agency/: commands.py  models.py  queries.py
backend/services/bio_adn/: __init__.py  api.py  constants.py  events.py  kafka.py  models.py  quality.py
backend/services/chapi/: __init__.py  api.py
backend/services/credential_flow/: __init__.py  api.py
backend/services/credential_manifest/: __init__.py  api.py
backend/services/did/: __init__.py  api.py
backend/services/didcomm/: __init__.py  api.py
backend/services/didcomm_mediator/: __init__.py  api.py
backend/services/identity/: aggregate.py  commands.py  events.py  models.py  queries.py
backend/services/notification/: models.py  webhook.py
backend/services/pex/: __init__.py  api.py
backend/services/pki/: __init__.py  api.py  ca.py
backend/services/revocation/: __init__.py  api.py
backend/services/sd_jwt/: __init__.py  api.py
backend/services/siopv2/: __init__.py  api.py
backend/services/status_list/: __init__.py  api.py
backend/services/vc/: __init__.py  api.py  issuer.py  verifier.py
backend/services/vp/: __init__.py  api.py
backend/services/wallet/: __init__.py  api.py
backend/shared/: __init__.py  audit.py  auth_deps.py  config.py  retry.py  ssi_storage.py
backend/shared/auth/: __init__.py  dependencies.py
backend/shared/cache/: __init__.py
backend/shared/cqrs/: __init__.py  aggregates.py
backend/shared/database/: __init__.py  bio_adn_models.py  event_store.py  ssi_models.py
backend/shared/events/: __init__.py
backend/tests/: conftest.py  test_api.py  test_integration_database.py  test_ssi_integration.py  test_ssi_integration_new.py
(+4218 files in other folders)
