[project]
name = "sniside-sdk"
version = "2.1.0"
description = "Python SDK for SNI-SIDE National Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]
license = {text = "Proprietary"}
classifiers = [
    "Intended Audience :: Government",
    "Topic :: Security :: Intelligence",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
